# tobiko

./: .ansible-lint  .coveragerc  .dockerignore  .gitignore  .gitreview  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .stestr.conf  Dockerfile  Pipfile  README.rst  Vagrantfile  ansible.cfg  bindep.txt  docker-compose.yml  extra-requirements.txt  infrared-requirements.txt  linters-requirements.txt  lower-constraints.txt  mypy.ini  neutron-requirements.txt  pep8-requirements.txt  plugin.spec  pylint-requirements.txt  pytest.ini  report-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tobiko.conf.example  tox.ini  upper-constraints.txt
devstack/: README.rst  plugin.sh  settings
devstack/vagrant/: local.conf  ovn-local.conf  provision.bash
doc/: readthedocs_requirements.txt  requirements.txt  rtd-requirements.txt
doc/source/: conf.py  content.rst  contents.rst  index.rst
docs/: installation.md  quick-start.md  requirements.txt  usage.md
etc/: tobiko.conf.example
etc/oslo-config-generator/: tobiko.conf
infrared/: install.yml  main.yml  plugin.spec
infrared/tasks/: configure.yml  install.yml  report.yml  run.yml
infrared_plugin/: Dockerfile  infrared.yaml  jenkins.yaml  main.yaml  plugin.spec  requirements.txt
playbooks/: devstack.yaml  post-tobiko.yaml  pre-tobiko-devstack.yaml  tobiko-devstack-post-run.yaml  tobiko-devstack-pre-run.yaml  tobiko-devstack-run.yaml  tobiko-devstack.yaml  tobiko-tox-py38-pre-run.yaml
playbooks/devstack/: post.yaml  pre.yaml  run.yaml
playbooks/docker/: post.yaml  pre.yaml  run.yaml
playbooks/infrared/: post.yaml  pre.yaml  run.yaml
playbooks/tox-py38/: pre.yaml
playbooks/tripleo/: post.yaml  (+2 more)
report/: build.sh  requirements.txt
roles/: infrared.yaml  plugin.spec
tobiko/: __init__.py  config.py  plugin.py  version.py
tools/: abandon_old_reviews.sh  common.py  ensure_podman1.py  get_version.py  install-bindeps.sh  install.py  run_tests.py  setup_infrared.py
zuul.d/: devstack.yaml  docker.yaml  infrared.yaml  jobs.yaml  mypy.yaml  nodes.yaml  others.yaml  project.yaml  projects.yaml  tobiko-devstack-octavia.yaml  tobiko-devstack-ovn.yaml  tobiko-devstack.yaml  tobiko-tripleo.yaml  tripleo.yaml  unit.yaml
(+873 files in other folders)
