[metadata]
name = tobiko
summary = OpenStack Testing Upgrades Library
description-file =
    README.rst
author = OpenStack
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

keywords =
    setup
    distutils

[files]
packages = 
    tobiko

[entry_points]
tempest.test_plugins = 
    tobiko = tobiko.plugin:TobikoTempestPlugin

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
