[metadata]
name = tobiko
summary = OpenStack Testing Upgrades Library
description_file =
    README.rst
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://tobiko.readthedocs.io/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

keywords =
    setup
    distutils

[files]
packages =
    tobiko

[entry_points]
console_scripts =
    tobiko-fixture = tobiko.cmd.fixture:main
    tobiko-keystone-credentials = tobiko.openstack.keystone._credentials:print_credentials
oslo.config.opts =
    tobiko = tobiko.config:list_tobiko_options

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[tool:pytest]
render_collapsed = True
